@@ -1,63 +1,103 @@
 package com.udea.sistemas.innosistemas.controllers;
 import com.udea.sistemas.innosistemas.models.dto.UserDto;
+import com.udea.sistemas.innosistemas.models.dto.UserWithRoleDto;
+import com.udea.sistemas.innosistemas.models.dto.CreateUserDto;
 import com.udea.sistemas.innosistemas.repository.UserRepository;
+import com.udea.sistemas.innosistemas.service.UserService;
+import org.springframework.http.HttpStatus;
 
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.CrossOrigin;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
 
-@CrossOrigin(origins = "http://localhost:3004")
+
 @RestController
-@RequestMapping("/api/user")
+@RequestMapping("/api/users")
 @Tag(name = "Users", description = "Endpoints for managing Users")
 public class UserController {
 
     private final UserRepository userRepository;
+    private final UserService userService;
 
-    public UserController(UserRepository userRepository) {
+    public UserController(UserRepository userRepository, UserService userService) {
         this.userRepository = userRepository;
+        this.userService = userService;
     }
     
-    @GetMapping("/getAllUsers")
+   @GetMapping("/getAllUsers")
+    @PreAuthorize("hasAuthority('read_user')")
     @Operation(summary = "Get all users", description = "Retrieves a list of all users in the system")
-    public ResponseEntity<List<UserDto>> getAllUsers() {
+    public ResponseEntity<List<UserWithRoleDto>> getAllUsers() {
         try {
-            List<UserDto> users = userRepository.findAll().stream()
-                .map(user -> new UserDto(user.getEmail(), user.getNameUser()))
-                .collect(Collectors.toList());
-            if (users.isEmpty()) {
+            List<UserWithRoleDto> userDtos = userRepository.findAll().stream()
+                    .map(user -> new UserWithRoleDto(user.getEmail(), user.getNameUser(), user.getRole().getNameRol()))
+                    .toList();
+            if (userDtos.isEmpty()) {
                 return ResponseEntity.noContent().build();
             }
-            return ResponseEntity.ok(users);
+            return ResponseEntity.ok(userDtos);
         } catch (Exception e) {
-            e.printStackTrace();
-            e.getMessage();
+
             return ResponseEntity.internalServerError().build();
         }
     }
 
     @GetMapping("/getStudents")
+    @PreAuthorize("hasAuthority('read_students')")
     @Operation(summary = "Get all students", description = "Retrieves a list of all users with student role")
     public ResponseEntity<List<UserDto>> getAllStudents() {
         try {
-            List<UserDto> students = userRepository.findByRole_NameRol("Estudiante").stream()
-                .map(user -> new UserDto(user.getEmail(), user.getNameUser()))
-                .collect(Collectors.toList());
-            if (students.isEmpty()) {
+            List<UserDto> userDtos = userRepository.findByRole_NameRol("Estudiante").stream()
+                    .map(user -> new UserDto(user.getEmail(), user.getNameUser()))
+                    .toList();
+            if (userDtos.isEmpty()) {
                 return ResponseEntity.noContent().build();
             }
-            return ResponseEntity.ok(students);
+            return ResponseEntity.ok(userDtos);
         } catch (Exception e) {
-            e.printStackTrace();
             return ResponseEntity.internalServerError().build();
         }
     }
+
+    @PostMapping("/createUser")
+    @Operation(summary = "Create a new user", description = "Creates a new user in the system")
+    public ResponseEntity<?> createUser(@RequestBody CreateUserDto createUserDto) {
+        try {
+            if(userService.createUser(createUserDto)) {
+                return ResponseEntity.status(HttpStatus.OK)
+                    .body(Map.of("message", "User created successfully", "success", true));
+            } else {
+                return ResponseEntity.status(HttpStatus.CONFLICT)
+                    .body(Map.of("message", "User already exists", "success", false));
+            }
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .body(Map.of("message", "Internal server error", "success", false));
+        }
+    }
+
+    @DeleteMapping("/deleteUser/{email}")
+    @PreAuthorize("hasAuthority('delete_user')")
+    @Operation(summary = "Delete a user", description = "Deletes a user from the system by email")
+    public ResponseEntity<String> deleteUser(@PathVariable String email) {
+        try {
+            if(userService.deleteUser(email)) {
+                return ResponseEntity.ok("User deleted successfully");
+            } else {
+                return ResponseEntity.status(HttpStatus.NOT_FOUND).body("User not found");
+            }
+        } catch (Exception e) {
+            return ResponseEntity.internalServerError().build();
+        }
+    }
+    
 }
+
